import "ydb/public/api/protos/ydb_status_codes.proto";

package NKikimrConsole;
option java_package = "ru.yandex.kikimr.proto";

message TStatus {
    optional Ydb.StatusIds.StatusCode Code = 1;
    optional string Reason = 2;
}
